<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:orientation="vertical"
    android:gravity="center" android:layout_marginTop="16dp" android:id="@+id/temp3">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/app_name" android:fontFamily="@font/fonts"
                  android:textSize="24sp" android:textStyle="bold"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_motto" android:fontFamily="@font/fonts"
                  android:textStyle="italic" />
    </LinearLayout>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login"
              android:fontFamily="@font/fonts"
              android:textSize="48sp" android:textStyle="bold"
              android:layout_alignParentStart="true" android:layout_marginStart="137dp" android:layout_marginTop="140dp"
              android:layout_alignParentTop="true"/>


<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="phone" android:hint="@string/login_phoneNumber"
    android:layout_centerInParent="true" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/client_login_phoneNumber"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="textPassword" android:hint="@string/login_password"
    android:layout_centerInParent="true" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/client_login_password"
    android:layout_below="@id/client_login_phoneNumber" android:layout_marginTop="16dp"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_forgot" android:id="@+id/client_login_forgotPassword"
    android:layout_below="@id/client_login_password" android:layout_marginTop="8dp" android:layout_alignParentEnd="true" android:layout_marginEnd="8dp"/>

    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Login"  android:ems="18" android:layout_marginTop="72dp"
            android:id="@+id/client_login-button" android:layout_centerHorizontal="true" android:layout_below="@id/client_login_forgotPassword"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_signup" android:id="@+id/client_login_signup"
              android:layout_below="@id/client_login-button" android:layout_centerHorizontal="true" />

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_signHere" android:id="@+id/client_login_signup-here"
              android:layout_toEndOf="@id/client_login_signup" android:layout_marginStart="4dp" android:layout_below="@id/client_login-button"
    android:textColor="@android:color/holo_blue_dark"/>


</RelativeLayout>