<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/about_background">
<ImageView android:layout_width="200dp" android:layout_height="200dp" android:layout_centerHorizontal="true"
        android:layout_above="@id/about_squickyclean" android:layout_marginBottom="16dp" android:elevation="8dp"/>
<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name"
                    android:textSize="48sp" android:layout_centerInParent="true" android:id="@+id/about_squickyclean"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_motto"
    android:textSize="12sp" android:layout_below="@id/about_squickyclean" android:layout_centerHorizontal="true" android:id="@+id/about_motto" />

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_disclaimer" android:layout_marginTop="18dp"
              android:textSize="16sp" android:layout_below="@id/about_motto" android:layout_centerHorizontal="true" android:id="@+id/about_sponsor" />

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_alignParentBottom="true"
                  android:layout_centerHorizontal="true" android:gravity="center" android:layout_marginBottom="8dp">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_rights" android:id="@+id/about_rights"
              android:textSize="16sp"  />
<androidx.cardview.widget.CardView android:layout_width="180dp" android:layout_height="2dp" android:layout_marginBottom="8dp"
                                   app:cardBackgroundColor="@color/colorPrimaryDark" app:cardElevation="4dp" app:cardCornerRadius="16dp" android:layout_marginTop="8dp" />

    </LinearLayout>

</RelativeLayout>