<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent" android:scrollbars="vertical">


    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="32sp" android:textStyle="bold"
        android:text="@string/client_Dashboard" android:fontFamily="@font/Raleway-Bold" android:layout_marginStart="8dp" android:layout_marginTop="16dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="16sp"
              android:text="Welcome" android:fontFamily="@font/Raleway-Regular" android:layout_marginTop="60dp"
              android:layout_marginStart="16dp" android:id="@+id/welcome"
              />

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="16sp"
              android:textStyle="bold" android:text="John Doe" android:fontFamily="@font/Raleway-Bold"
                android:layout_toEndOf="@id/welcome" android:layout_marginTop="60dp" android:layout_marginStart="4dp"/>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical"
                  android:gravity="center" android:layout_alignParentEnd="true" android:layout_margin="16dp" >
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="16sp"
                  android:text="@string/client_pendingServices" android:fontFamily="@font/Raleway-Regular"
                   />
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="16sp"
                  android:textStyle="bold" android:text="@string/client_pendingResponse" android:fontFamily="@font/Raleway-Bold"
                   />

    </LinearLayout>


    <GridLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:columnCount="2" android:columnOrderPreserved="true"
            android:rowCount="3" android:layout_centerHorizontal="true" android:layout_marginTop="140dp"
                android:id="@+id/dashboard_grid" >


  <androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                     android:layout_margin="16dp" app:cardBackgroundColor="#d3d3d3" app:cardElevation="8dp">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
            android:paddingLeft="16dp" android:paddingBottom="16dp" android:paddingEnd="8dp" >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/Raleway-Regular"
            android:text="@string/client_HomeCleaning" android:textSize="32sp"  />
<View android:layout_width="90dp" android:layout_height="8dp" android:background="@android:color/black" android:layout_marginTop="8dp"/>
    </LinearLayout>
  </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                       android:layout_margin="16dp" app:cardBackgroundColor="#d3d3d3" app:cardElevation="8dp">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
            android:paddingLeft="16dp" android:paddingBottom="16dp" android:paddingEnd="8dp" >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/Raleway-Regular"
            android:text="@string/client_GeneralCleaning" android:textSize="32sp"  />
<View android:layout_width="80dp" android:layout_height="8dp" android:background="@android:color/black" android:layout_marginTop="8dp"/>
    </LinearLayout>
  </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                       android:layout_margin="16dp" app:cardBackgroundColor="#d3d3d3" app:cardElevation="8dp">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
            android:paddingLeft="16dp" android:paddingBottom="16dp" android:paddingEnd="8dp" >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/Raleway-Regular"
            android:text="@string/client_EventCleaning" android:textSize="32sp"  />
<View android:layout_width="80dp" android:layout_height="8dp" android:background="@android:color/black" android:layout_marginTop="8dp"/>
    </LinearLayout>
  </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                       android:layout_margin="16dp" app:cardBackgroundColor="#d3d3d3" app:cardElevation="8dp">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
            android:paddingLeft="16dp" android:paddingBottom="16dp" android:paddingEnd="8dp" >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/Raleway-Regular"
            android:text="@string/client_OfficeCleaning" android:textSize="32sp" />
<View android:layout_width="80dp" android:layout_height="8dp" android:background="@android:color/black" android:layout_marginTop="8dp"/>
    </LinearLayout>
  </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                       android:layout_margin="16dp" app:cardBackgroundColor="#d3d3d3" app:cardElevation="8dp">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
            android:paddingLeft="8dp" android:paddingBottom="16dp" android:paddingEnd="8dp" >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/Raleway-Regular"
            android:text="@string/client_IndustrialCleaning" android:textSize="32sp"  />
<View android:layout_width="80dp" android:layout_height="8dp" android:background="@android:color/black" android:layout_marginTop="8dp"/>
    </LinearLayout>
  </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content"
                                       android:layout_margin="16dp" app:cardBackgroundColor="#d3d3d3" app:cardElevation="8dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
                      android:paddingLeft="16dp" android:paddingBottom="16dp" android:paddingEnd="8dp" >
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/Raleway-Regular"
                      android:text="@string/client_ContractCleaning" android:textSize="32sp"  />
            <View android:layout_width="80dp" android:layout_height="8dp" android:background="@android:color/black" android:layout_margin="8dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</GridLayout>

    <ImageView android:layout_width="377dp" android:layout_height="wrap_content" android:layout_margin="16dp"
               android:layout_below="@id/dashboard_grid" android:contentDescription="@string/client_Banner"
               />




</RelativeLayout>            </ScrollView>